Session 3 - Homework/Task3/deployment3-3.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-viordanov
  labels:
    app: frontend-viordanov
    service: frontend
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: frontend-viordanov
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-viordanov
  labels:
    app: frontend-viordanov
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-viordanov
      version: v1
  template:
    metadata:
      labels:
        app: frontend-viordanov
        version: v1
    spec:
      serviceAccountName: servicemesh-frontend
      containers:
        - name: frontend
          image: docker.io/viordanov/frontend-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
